fix(style): hide undesired vertical scrollbar

--- a/src/app/shared/components/products-display/products-display.component.css
+++ b/src/app/shared/components/products-display/products-display.component.css
@@ -51,7 +51,8 @@
 }
 .wrapper.scrollable > .contents {
   flex-flow: row nowrap;
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   justify-content: initial;
 }
 
